@@ -1,8 +1,8 @@
-package com.learnkafka.producer;
+package com.codenotfound.kafka.producer;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.learnkafka.domain.LibraryEvent;
+import com.codenotfound.kafka.domain.LibraryEvent;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.kafka.clients.producer.ProducerRecord;
 import org.apache.kafka.common.header.Header;
@@ -14,6 +14,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.util.concurrent.ListenableFuture;
 import org.springframework.util.concurrent.ListenableFutureCallback;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
@@ -76,7 +77,8 @@ public class LibraryEventProducer {
     private ProducerRecord<Integer, String> buildProducerRecord(Integer key, String value, String topic) {
 
 
-        List<Header> recordHeaders = List.of(new RecordHeader("event-source", "scanner".getBytes()));
+        List<Header> recordHeaders =
+                Arrays.asList(new RecordHeader[]{new RecordHeader("event-source", "scanner".getBytes())});
 
         return new ProducerRecord<>(topic, null, key, value, recordHeaders);
     }
